--- a/dogger.scss
+++ b/dogger.scss
@@ -1,6 +1,10 @@
 @import './_color.scss';
 @import './_mixin.scss';
-
+@import './_navbar.scss';
+@import './_border.scss';
+@import './_love.scss';
+@import './_aboutus.scss';
+@import './jesi.scss';
 
 * {
     margin: 0px;
@@ -8,179 +12,13 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.nav-bar {
-    @extend %df;
-    width: 100vw;
-    position: fixed;
-    justify-content: space-around;
-    font-size: 30px;
-    background-color: #F8F9FA;
-    border-bottom: 2px solid black;
-    box-shadow: 2px 1px 5px 2px black;
 
-    .dogger {
-        font-size: 35px;
-        font-weight: 600;
-
-        span {
-            color: $colorr;
-        }
-    }
-
-    .home {
-        font-size: 20px;
-        display: flex;
-        margin: 20px 0;
-        justify-content: space-evenly;
-        align-items: center;
-
-
-
-        .hh {
-            margin: 15px 25px;
-
-            &:hover {
-                color: $colorr ;
-            }
-        }
-
-        #on {
-            display: none;
-        }
-
-        #on:checked+.about>.trade {
-            display: block;
-        }
-
-        .about {
-
-
-            .trade {
-
-                position: absolute;
-                top: 70px;
-                width: 200px;
-
-                display: none;
-
-                &:hover {
-                    color: black;
-                }
-
-                ul {
-                    margin: 0;
-
-                    font-size: 30px;
-                    line-height: 40px;
-                    font-weight: 550;
-                    list-style: none;
-                    background-color: rgba(243, 235, 235, 0.954);
-                    height: 300px;
-                    border-top: 2px solid grey;
-                    box-shadow: 2px 1px 5px 2px black;
-
-                    li {
-                        text-align: center;
-                        cursor: pointer;
-                    }
-
-                    li:hover {
-                        background-color: rgb(210, 185, 185);
-                        color: black;
-                    }
-
-
-                }
-            }
-        }
-
-
-    }
-
-    @media(max-width:1000px) {
-        .home {
-            display: none;
-        }
-    }
-
-    .menu {
-        margin-right: 50px;
-        display: none;
-        margin: 20px;
-    }
-
-    @media(max-width:1000px) {
-        .menu {
-            display: block;
-        }
-    }
-}
 
 
 
 // border
 
-.border {
-    width: 100vw;
-    height: 100vh;
-    // border: 4px solid red;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 17px;
-    background-color: #F8F9FA;
 
-    .wecare {
-        // width: 50%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-        padding: 10px 20px;
-
-        h1 {
-            font-size: 3.5em;
-            font-weight: 700;
-            // text-align: center;
-        }
-
-        p {
-            font-size: 1.6em;
-            color: $colorr;
-
-
-        }
-    }
-
-    .dog-img {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0;
-        height: 700px;
-        width: 600px;
-
-        .blackky-dog {
-            width: 90%;
-            height: 100%;
-            background-image: url('./src/dogger_img_1.png');
-            background-size: 100%;
-            background-repeat: no-repeat;
-            background-position: center bottom;
-        }
-    }
-
-    @media(max-width:400px) {
-        .dog-img {
-            background-size: 90%;
-            background-position: center bottom;
-        }
-    }
-
-    @import'./_1100pxmedia.scss';
-}
-
-@import'./800px';
 
 
 .welcome {
@@ -247,419 +85,11 @@
 
 // love & care 
 
-.love {
-    width: 100vw;
-    // height: 700px;
-    // border: 4px solid black;
-    display: flex;
-    justify-content: space-evenly;
-    // align-items: center;
 
-    .love-border {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        // flex-direction: column;
-        flex-wrap: wrap;
-        // column-count: 2;
-
-
-        .love-care {
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            flex-direction: column;
-            font-size: 17px;
-            // order: 2;
-
-
-            .care {
-                font-size: 2.5em;
-                font-weight: 600;
-                text-align: justify;
-                margin: 10px;
-            }
-
-            .Far-far {
-                color: $colorr;
-                font-size: 1.4em;
-                text-align: right;
-                margin: 10px;
-            }
-
-            .readme {
-                padding: 10px 20px;
-                background-color: $colorr;
-                border-radius: 30px;
-                margin: 10px;
-                color: white;
-                transition: 1s;
-
-                &:hover {
-                    background-color: black;
-                    color: white;
-                }
-
-            }
-        }
-
-        .ll {
-
-            width: calc(95%/2);
-            height: 50%;
-            // border: 2px solid black;
-            padding: 10px;
-        }
-
-        .nurse-doctor {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 300px;
-            width: 45%;
-            // order: 1;
-
-            .nurse-img {
-                width: 100%;
-                height: 100%;
-                background-image: url('./src/dogger_img_sm_3.jpg.webp');
-                background-size: 100%;
-                transition: 1s;
-                background-repeat: no-repeat;
-                padding: 10px;
-
-                &:hover {
-                    box-shadow: 10px 10px 2px 2px $colorr;
-                }
-            }
-
-        }
-
-        .fearsome {
-            display: flex;
-            align-items: flex-start;
-            justify-content: center;
-            flex-direction: column;
-            font-size: 16px;
-            // order: 4;
-
-            .care {
-                font-size: 2.5em;
-                font-weight: 600;
-                text-align: left;
-                margin: 10px;
-            }
-
-            .Far-far {
-                color: $colorr;
-                font-size: 1.4em;
-                text-align: left;
-                margin: 10px;
-            }
-
-            .readme {
-                padding: 10px 20px;
-                background-color: $colorr;
-                border-radius: 30px;
-                margin: 10px;
-                color: white;
-                transition: 1s;
-
-                &:hover {
-                    background-color: black;
-                    color: white;
-                }
-            }
-
-
-        }
-
-
-        .fearsome-dog {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 300px;
-            width: 45%;
-            // order: 3;
-
-            .fear-dog-img {
-                width: 100%;
-                height: 100%;
-                padding: 15px;
-                background-image: url('./src/dogger_img_sm_1.jpg.webp');
-                background-size: 100%;
-
-                // object-fit: contain;
-                transition: 1s;
-                background-repeat: no-repeat;
-
-                &:hover {
-                    box-shadow: 10px 10px 2px 2px $colorr;
-                }
-            }
-
-        }
-
-        .beautiful-dog {
-
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 300px;
-            width: 45%;
-
-            .beautiful-dog-img {
-                width: 100%;
-                height: 100%;
-                // order: 6;
-
-                background-image: url('./src/dogger_img_sm_2.jpg.webp');
-                background-size: 100%;
-                transition: 1s;
-                background-position: center;
-                background-repeat: no-repeat;
-
-                &:hover {
-                    box-shadow: 10px 10px 2px 2px $colorr;
-                }
-            }
-        }
-
-        .beautiful {
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            flex-direction: column;
-            font-size: 16px;
-            // order: 5;
-
-            .care {
-                font-size: 2.5em;
-                font-weight: 600;
-                text-align: justify;
-                margin: 10px;
-            }
-
-            .Far-far {
-                color: $colorr;
-                font-size: 1.4em;
-                text-align: right;
-                margin: 10px;
-            }
-
-            .readme {
-                padding: 10px 10px;
-                background-color: $colorr;
-                border-radius: 30px;
-                margin: 10px;
-                color: white;
-                transition: 1s;
-
-                &:hover {
-                    background-color: black;
-                    color: white;
-                }
-            }
-
-        }
-
-
-    }
-
-    @media (max-width:1020px) {
-        .love-border {
-            // column-count: 1;
-            flex-direction: column;
-            flex-wrap: wrap;
-            width: 85%;
-
-
-            .ll {
-                width: 100%;
-                // height: 100%;
-            }
-
-            .ll:nth-child(1) {
-                order: 2;
-                background-size: contain;
-
-            }
-
-            .ll:nth-child(2) {
-                order: 1;
-                height: 500px;
-            }
-
-            .ll:nth-child(3) {
-                order: 3;
-
-            }
-
-            .ll:nth-child(4) {
-                order: 4;
-
-
-            }
-
-            .ll:nth-child(5) {
-                order: 6;
-
-            }
-
-            .ll:nth-child(6) {
-                order: 5;
-                background-size: cover;
-                height: 500px;
-            }
-
-        }
-    }
-
-}
 
 // about-us
 
-.about-us {
-    width: 100vw;
-    // height: 100vh;
-    // border: 2px solid black;
-    @extend %df;
-    justify-content: space-evenly;
-    padding: 20px;
 
-    .aboutt {
-        width: 50%;
-        height: 100%;
-        // border: 4px solid red;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-
-        .uss {
-            width: 85%;
-            height: 85%;
-            @include display-flex($justify-content: center);
-            flex-direction: column;
-            align-items: flex-start;
-            font-size: 16px;
-
-            span {
-                font-size: 2.3em;
-            }
-
-            .pow {
-                color: $colorr;
-            }
-
-            .aboutt-us {
-                font-size: 2.8em;
-                margin: 10px;
-                font-weight: 650;
-            }
-
-            .separate {
-                font-size: 1.8em;
-                font-weight: 300;
-                margin: 10px;
-                color: $colorr;
-            }
-
-            .small {
-                font-size: 1.4em;
-                font-weight: 400;
-                margin: 10px;
-                color: $colorr;
-            }
-
-            .small-river ul {
-                list-style: none;
-
-                li {
-                    margin: 10px;
-                    font-size: 1.4em;
-                    font-weight: 400;
-                    color: $colorr;
-                }
-            }
-        }
-
-        @media(max-width:1080px) {
-            .uss {
-                font-size: 12px;
-                width: 90%;
-                height: 90%;
-            }
-        }
-
-        @media(max-width:660px) {
-            .uss {
-                font-size: 8px;
-                width: 95%;
-                height: 95%;
-            }
-        }
-    }
-
-    .dog-vide {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0;
-        height: 600px;
-        width: 600px;
-
-        .dogg-video {
-            width: 90%;
-            height: 100%;
-            // border: 2px solid black;
-            background-image: url('./src/dogger_img_big_1.jpg');
-            background-repeat: no-repeat;
-            background-size: 90%;
-            background-position: center bottom;
-        }
-
-        @media(max-width:1150px) {
-            .dogg-video {
-                height: 85%;
-            }
-        }
-    }
-
-}
-
-@media(max-width:950px) {
-    .about-us {
-        flex-direction: column;
-
-
-
-
-        .aboutt {
-            width: 100%;
-            height: 50%;
-
-            .uss {
-                font-size: 18px;
-            }
-        }
-
-        .dog-vide {
-            height: 800px;
-            align-self: stretch;
-            // width: 600px;
-
-            .dog-video {
-                height: 100%;
-                width: 100%;
-            }
-        }
-
-    }
-}
 
 // our-trainer
 
@@ -728,270 +158,7 @@
 // jesi
 
 
-.jesi {
-    width: 100vw;
-    // height: 100vh;
-    background-color: #A2C0BE;
-    display: flex;
-    // border: 2px solid black;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
 
-    .pictures {
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
-        flex-wrap: wrap;
-        width: 90%;
-
-        // border: 2px solid black;
-
-        .pics {
-            width: 350px;
-            height: 803px;
-            // border: 2px solid black;
-            margin: 10px;
-        }
-
-        @media (max-width:840px) {
-            .pics {
-                width: 500px;
-
-                .img {
-                    background-size: 100%;
-                    background-position: center;
-                }
-            }
-        }
-
-
-
-        .pics:nth-child(1) {
-            @extend %df;
-            justify-content: flex-start;
-            align-items: center;
-            flex-direction: column;
-
-            .img {
-                width: 100%;
-                height: 58%;
-                // border: 2px solid black;
-                background-image: url('./src/dogger_trainer_1.jpg.webp');
-                background-size: 100%;
-                transition: 1.5s;
-                background-repeat: no-repeat;
-
-                &:hover {
-                    @extend %hover;
-                }
-            }
-
-            .jesica {
-                display: flex;
-                align-items: flex-start;
-                flex-direction: column;
-                justify-content: center;
-
-                p {
-                    margin: 25px;
-                }
-
-                p:first-child {
-                    font-size: 2em;
-                }
-
-                p:nth-child(3) {
-                    position: relative;
-
-                    span {
-                        margin: 10px;
-                        padding: 8px 12px;
-                        background-color: white;
-                        border-radius: 50%;
-                        position: absolute;
-                        bottom: -40px;
-                        transition: 1s;
-
-                        &:hover {
-                            transform: translateY(-20px);
-                        }
-
-                    }
-
-                    span:nth-child(2) {
-                        left: 70px;
-
-
-                    }
-
-
-
-                    span:nth-child(3) {
-                        left: 140px;
-                        padding: 8px 14px;
-                    }
-
-
-                }
-            }
-
-
-        }
-
-
-
-
-        .pics:nth-child(2) {
-            @extend %df;
-            justify-content: flex-start;
-            align-items: center;
-            flex-direction: column;
-
-            .img {
-                width: 100%;
-                height: 58%;
-                // border: 2px solid black;
-                background-image: url('./src/dogger_trainer_2.jpg.webp');
-                background-size: 100%;
-                transition: 1.5s;
-
-                &:hover {
-                    @extend %hover;
-                }
-            }
-
-            .jesica {
-                display: flex;
-                align-items: flex-start;
-                flex-direction: column;
-                justify-content: center;
-
-                p {
-                    margin: 25px;
-                }
-
-                p:first-child {
-                    font-size: 2em;
-                }
-
-                p:nth-child(3) {
-                    position: relative;
-
-                    span {
-
-                        margin: 10px;
-                        padding: 8px 12px;
-                        background-color: white;
-                        border-radius: 50%;
-                        position: absolute;
-                        transition: 1s;
-                        bottom: -40px;
-
-                        &:hover {
-                            transform: translateY(-20px);
-                        }
-                    }
-
-                    span:nth-child(2) {
-                        left: 70px;
-
-
-                    }
-
-
-
-                    span:nth-child(3) {
-                        left: 140px;
-                        padding: 8px 14px;
-                    }
-
-                }
-            }
-
-
-        }
-
-
-        .pics:nth-child(3) {
-            @extend %df;
-            justify-content: flex-start;
-            align-items: center;
-            flex-direction: column;
-            // flex-grow: 1;
-
-            .img {
-                width: 100%;
-                height: 58%;
-                // border: 2px solid black;
-                background-image: url('./src/dogger_trainer_3.jpg.webp');
-                background-size: 100%;
-                background-position: center;
-                background-repeat: no-repeat;
-                transition: 1.5s;
-                // flex-grow: 1;
-
-                &:hover {
-                    @extend %hover;
-                }
-            }
-
-            .jesica {
-                display: flex;
-                align-items: flex-start;
-                flex-direction: column;
-                justify-content: center;
-
-                p {
-                    margin: 25px;
-                }
-
-                p:first-child {
-                    font-size: 2em;
-                }
-
-                p:nth-child(3) {
-                    position: relative;
-
-                    span {
-                        margin: 10px;
-                        padding: 8px 12px;
-                        background-color: white;
-                        border-radius: 50%;
-                        position: absolute;
-                        transition: 1s;
-                        bottom: -40px;
-
-                        &:hover {
-                            transform: translateY(-20px);
-                        }
-
-
-
-
-
-                    }
-
-                    span:nth-child(2) {
-                        left: 70px;
-
-
-                    }
-
-
-
-                    span:nth-child(3) {
-                        left: 140px;
-                        padding: 8px 14px;
-                    }
-                }
-            }
-
-
-        }
-
-    }
-}
 
 
 // pricing
