--- a/dogger.css
+++ b/dogger.css
@@ -497,7 +497,7 @@
 }
 .jesi .pictures {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   width: 90%;
@@ -657,6 +657,22 @@
   left: 140px;
   padding: 8px 14px;
 }
+@media (max-width: 1233px) {
+  .jesi .pictures {
+    justify-content: flex-start;
+  }
+  .jesi .pictures .pics {
+    width: 450px;
+  }
+}
+@media (max-width: 1045px) {
+  .jesi .pictures {
+    justify-content: center;
+  }
+  .jesi .pictures .pics {
+    width: 500px;
+  }
+}
 
 * {
   margin: 0px;
@@ -813,14 +829,14 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   padding: 20px 40px;
 }
 .basic .basicc {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap;
 }
 .basic .basicc .lef {
@@ -1003,5 +1019,10 @@
 @media (max-width: 920px) {
   .basic .basicc .right .bassi {
     font-size: 14px;
+  }
+}
+@media (max-width: 1280px) {
+  .basic .basicc {
+    justify-content: flex-start;
   }
 }/*# sourceMappingURL=dogger.css.map */
