--- a/dogger.scss
+++ b/dogger.scss
@@ -220,7 +220,7 @@
     // border: 2px solid black;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     // flex-wrap: wrap;
     padding: 20px 40px;
 
@@ -228,7 +228,7 @@
         width: 100%;
         display: flex;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         flex-wrap: wrap;
 
         .lef {
@@ -478,5 +478,11 @@
 
 
 
+    }
+
+    @media(max-width:1280px) {
+        .basicc {
+            justify-content: flex-start;
+        }
     }
 }
