--- a/_800px.scss
+++ b/_800px.scss
@@ -1,7 +1,7 @@
 @media (max-width:1000px) {
     .border {
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
 
 
