--- a/dogger.css
+++ b/dogger.css
@@ -149,7 +149,7 @@
 @media (max-width: 1000px) {
   .border {
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
   }
   .border .wecare {
