--- a/_800px.scss
+++ b/_800px.scss
@@ -37,3 +37,21 @@
         }
     }
 }
+
+@media(max-width:600px) {
+    .border {
+        align-items: flex-start;
+
+        .wecare {
+            h1 {
+                font-size: 4em;
+                text-align: center;
+            }
+
+            p {
+                font-size: 1.5em;
+                text-align: center;
+            }
+        }
+    }
+}
