--- a/dogger.scss
+++ b/dogger.scss
@@ -4,21 +4,14 @@
 @import './_border.scss';
 @import './_love.scss';
 @import './_aboutus.scss';
-@import './jesi.scss';
+@import './_jesi.scss';
+@import './_photos.scss';
 
 * {
     margin: 0px;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-
-
-
-
-// border
-
-
 
 
 .welcome {
@@ -83,11 +76,6 @@
     }
 }
 
-// love & care 
-
-
-
-// about-us
 
 
 
@@ -154,10 +142,6 @@
 
     }
 }
-
-// jesi
-
-
 
 
 
@@ -238,21 +222,23 @@
             margin: 20px 20px;
         }
 
-        @media(max-width:1200px) {
+
+
+        @media(max-width:1280px) {
             .lef {
-                width: 40%;
+                width: 45%;
             }
         }
 
         @media(max-width:900px) {
             .lef {
-                width: 60%;
+                width: 70%;
             }
         }
 
         @media(max-width:650px) {
             .lef {
-                width: 75%;
+                width: 85%;
             }
         }
 
@@ -280,6 +266,10 @@
 
                 p:nth-child(2) {
                     font-size: 3em;
+
+                    span {
+                        font-size: 0.5em;
+                    }
 
                 }
 
@@ -357,6 +347,10 @@
                 p:nth-child(2) {
                     font-size: 3em;
 
+                    span {
+                        font-size: 0.5em;
+                    }
+
                 }
 
                 ul {
@@ -429,6 +423,10 @@
                 p:nth-child(2) {
                     font-size: 3em;
 
+                    span {
+                        font-size: 0.5em;
+                    }
+
                 }
 
                 ul {
@@ -483,6 +481,12 @@
     @media(max-width:1280px) {
         .basicc {
             justify-content: flex-start;
+        }
+    }
+
+    @media(max-width:900px) {
+        .basicc {
+            justify-content: center;
         }
     }
 }
