--- a/_800px.scss
+++ b/_800px.scss
@@ -53,5 +53,9 @@
                 text-align: center;
             }
         }
+
+        .dog-img {
+            height: 850px;
+            width: 500px;
+        }
     }
-}
