--- a/dogger.css
+++ b/dogger.css
@@ -187,6 +187,10 @@
     font-size: 1.5em;
     text-align: center;
   }
+  .border .dog-img {
+    height: 850px;
+    width: 500px;
+  }
 }
 .love {
   width: 100vw;
