--- a/_navbar.scss
+++ b/_navbar.scss
@@ -120,31 +120,41 @@
     right: 0;
     background-color: white;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    transform: translateX(300px);
+    flex-direction: column;
+    // transform: translateX(300px);
 
     #navclose {
-        width: 40px;
+        width: 100%;
         height: 40px;
         // border: 2px solid black;
-        border-radius: 50%;
-        align-self: flex-start;
-        margin: 30px;
+        // border-radius: 50%;
+        align-self: flex-end;
+        // margin: 30px;
         // margin-right: 120px;
         padding: 30px;
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         font-size: 1em;
 
-        &:hover {
-            background-color: rgb(228, 204, 204);
+        #closee {
+            padding: 10px 20px;
+            border-radius: 50%;
+            // background-color: grey;
+
+            &:hover {
+                background-color: rgb(228, 204, 204);
+            }
         }
+
+
     }
 
     #navcontent {
-        width: 75%;
+        width: 100%;
+        margin-top: 20px;
         height: 70%;
         // border: 2px solid black;
         display: flex;
@@ -158,6 +168,7 @@
             padding: 10px 80px;
             padding-left: 0px;
             text-align: center;
+            font-size: 1.5em;
 
 
             &:hover {
