--- a/_navbar.scss
+++ b/_navbar.scss
@@ -123,7 +123,7 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    // transform: translateX(300px);
+    transform: translateX(300px);
 
     #navclose {
         width: 100%;
