--- a/dogger.css
+++ b/dogger.css
@@ -101,6 +101,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+  transform: translateX(300px);
 }
 #navigation #navclose {
   width: 100%;
@@ -1015,6 +1016,224 @@
 @media (max-width: 770px) {
   .should .box {
     font-size: 13px;
+  }
+}
+
+.happy {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 16px;
+}
+.happy .border-top {
+  width: 70%;
+  height: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
+  font-weight: 550;
+}
+.happy .border-top span {
+  font-size: 0.5em;
+  color: #799290;
+}
+@media (max-width: 900px) {
+  .happy .border-top {
+    width: 80%;
+  }
+}
+.happy .border-center {
+  width: 70%;
+  height: 70%;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+.happy .border-center #bordercenter {
+  height: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.happy .border-center #bordercenter .box {
+  width: 350px;
+  height: 95%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+.happy .border-center #bordercenter .box .robert1 {
+  width: 90%;
+  height: 75%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+  text-align: justify;
+  font-style: italic;
+  font-size: 1.2em;
+  font-weight: 550;
+  background-color: #A2C0BE;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+          clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+}
+.happy .border-center #bordercenter .box .robert2 {
+  width: 90px;
+  height: 90px;
+  border: 2px solid black;
+  background-color: #A2C0BE;
+  border-radius: 50%;
+  background-image: url("./src/person_2.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.happy .border-center #bordercenter .box .robert3 {
+  font-size: 1.3em;
+  margin: 5px;
+  font-weight: 550;
+}
+.happy .border-center #bordercenter .box .ricky1 {
+  width: 90%;
+  height: 75%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+  text-align: justify;
+  font-style: italic;
+  font-size: 1.2em;
+  font-weight: 550;
+  background-color: #A2C0BE;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+          clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+}
+.happy .border-center #bordercenter .box .ricky2 {
+  width: 90px;
+  height: 90px;
+  border: 2px solid black;
+  background-color: #A2C0BE;
+  border-radius: 50%;
+  background-image: url("./src/person_3.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.happy .border-center #bordercenter .box .ricky3 {
+  font-size: 1.3em;
+  margin: 5px;
+  font-weight: 550;
+}
+.happy .border-center #bordercenter .box .ken1 {
+  width: 90%;
+  height: 75%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+  text-align: justify;
+  font-style: italic;
+  font-size: 1.2em;
+  font-weight: 550;
+  background-color: #A2C0BE;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+          clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+}
+.happy .border-center #bordercenter .box .ken2 {
+  width: 90px;
+  height: 90px;
+  border: 2px solid black;
+  background-color: #A2C0BE;
+  border-radius: 50%;
+  background-image: url("./src/person_4.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.happy .border-center #bordercenter .box .ken3 {
+  font-size: 1.3em;
+  margin: 5px;
+  font-weight: 550;
+}
+.happy .border-center #bordercenter .box .mellisa1 {
+  width: 90%;
+  height: 75%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+  text-align: justify;
+  font-style: italic;
+  font-size: 1.2em;
+  font-weight: 550;
+  background-color: #A2C0BE;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+          clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+}
+.happy .border-center #bordercenter .box .mellisa2 {
+  width: 90px;
+  height: 90px;
+  border: 2px solid black;
+  background-color: #A2C0BE;
+  border-radius: 50%;
+  background-image: url("./src/person_1.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.happy .border-center #bordercenter .box .mellisa3 {
+  font-size: 1.3em;
+  margin: 5px;
+  font-weight: 550;
+}
+.happy .border-center #bordercenter .box .Steward1 {
+  width: 90%;
+  height: 75%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
+  text-align: justify;
+  font-style: italic;
+  font-size: 1.2em;
+  font-weight: 550;
+  background-color: #A2C0BE;
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+          clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 70% 76%, 56% 85%, 39% 76%, 0% 75%);
+}
+.happy .border-center #bordercenter .box .Steward2 {
+  width: 90px;
+  height: 90px;
+  border: 2px solid black;
+  background-color: #A2C0BE;
+  border-radius: 50%;
+  background-image: url("./src/person_2.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.happy .border-center #bordercenter .box .Steward3 {
+  font-size: 1.3em;
+  margin: 5px;
+  font-weight: 550;
+}
+@media (max-width: 900px) {
+  .happy .border-center {
+    width: 80%;
+  }
+}
+.happy .border-bottom {
+  width: 70%;
+  height: 17%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 3em;
+}
+@media (max-width: 900px) {
+  .happy .border-bottom {
+    width: 80%;
   }
 }
 
