--- a/dogger.scss
+++ b/dogger.scss
@@ -7,6 +7,7 @@
 @import './_jesi.scss';
 @import './_photos.scss';
 @import './_should.scss';
+@import './_happycustomer.scss';
 
 * {
     margin: 0px;
