--- a/_happycustomer.scss
+++ b/_happycustomer.scss
@@ -181,6 +181,12 @@
 
             }
 
+            @media(max-width:1000px) {
+                .box {
+                    width: 450px;
+                }
+            }
+
         }
 
 
