--- a/dogger.css
+++ b/dogger.css
@@ -767,6 +767,7 @@
   transition: 1s;
 }
 .photo .gallery .photos:hover {
+  cursor: zoom-in;
   transform: scaleX(1.3) scaleY(1.2);
 }
 @media (max-width: 1050px) {
@@ -1217,6 +1218,11 @@
   font-size: 1.3em;
   margin: 5px;
   font-weight: 550;
+}
+@media (max-width: 1000px) {
+  .happy .border-center #bordercenter .box {
+    width: 450px;
+  }
 }
 @media (max-width: 900px) {
   .happy .border-center {
