--- a/dogger.scss
+++ b/dogger.scss
@@ -8,6 +8,7 @@
 @import './_photos.scss';
 @import './_should.scss';
 @import './_happycustomer.scss';
+@import './_doggerblog.scss';
 
 * {
     margin: 0px;
