--- a/dogger.css
+++ b/dogger.css
@@ -1243,6 +1243,168 @@
   }
 }
 
+.dogger {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.dogger .blog {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 18px;
+}
+.dogger .blog p {
+  margin: 10px;
+}
+.dogger .blog p:first-child {
+  color: #799290;
+}
+.dogger .blog p:first-child span {
+  font-size: 2em;
+}
+.dogger .blog p:nth-child(2) {
+  font-size: 2em;
+  font-weight: 600;
+}
+.dogger .blog p:last-child {
+  font-size: 1.4em;
+  word-spacing: 5px;
+  color: #799290;
+  text-align: center;
+}
+@media (max-width: 1050px) {
+  .dogger .blog {
+    font-size: 20px;
+    width: 80%;
+  }
+}
+@media (max-width: 700px) {
+  .dogger .blog {
+    font-size: 15px;
+    width: 90%;
+  }
+}
+
+.fivething {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 15px;
+}
+.fivething .things {
+  width: 85%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.fivething .things .dogs {
+  width: 78%;
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.fivething .things .dogs .dog1-img {
+  width: 38%;
+  height: 150px;
+  align-self: flex-start;
+  margin: 5px;
+  background-image: url("./src/dogger_img_sm_1.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+@media (max-width: 900px) {
+  .fivething .things .dogs .dog1-img {
+    width: 70%;
+    height: 250px;
+  }
+}
+@media (max-width: 650px) {
+  .fivething .things .dogs .dog1-img {
+    width: 60%;
+    height: 150px;
+  }
+}
+.fivething .things .dogs #dog2-img {
+  background-image: url("./src/dogger_img_sm_2.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.fivething .things .dogs #dog3-img {
+  background-image: url("./src/dogger_img_sm_3.jpg.webp");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.fivething .things .dogs .dog1 {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  font-size: 16px;
+}
+.fivething .things .dogs .dog1 .div1 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.fivething .things .dogs .dog1 .div1 p:first-child {
+  font-size: 2em;
+  margin: 10px;
+  font-weight: 600;
+}
+.fivething .things .dogs .dog1 .div1 p:last-child {
+  font-size: 1.3em;
+  margin: 10px;
+  color: #799290;
+}
+.fivething .things .dogs .dog1 .div2 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.fivething .things .dogs .dog1 .div2 p:first-child {
+  font-size: 1.6em;
+  margin: 10px;
+  color: #5b6565;
+}
+.fivething .things .dogs .dog1 .div2 p:last-child {
+  font-size: 1.3em;
+  margin: 10px;
+  color: #799290;
+  font-weight: 550;
+}
+.fivething .things .dogs .dog1 .div2 p:last-child a {
+  text-decoration: none;
+  color: #5b6565;
+}
+@media (max-width: 900px) {
+  .fivething .things .dogs .dog1 {
+    width: 100%;
+    font-size: 20px;
+  }
+}
+@media (max-width: 650px) {
+  .fivething .things .dogs .dog1 {
+    width: 100%;
+    font-size: 15px;
+  }
+}
+@media (min-width: 1180px) {
+  .fivething .things .dogs {
+    width: 48%;
+  }
+}
+
 * {
   margin: 0px;
   box-sizing: border-box;
